Fix page jumping

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1694,8 +1694,17 @@ a.ais-Pagination-link:hover {
 
 // styling for model list from registry
 
-.mr-component, mr-model {
+.mr-component {
   margin-bottom: 1rem;
+}
+
+.mr-model {
+  min-height: 650px;
+}
+
+.training-scripts {
+  margin-bottom: 1rem;
+  min-height: 500px;
 }
 
 .modellist > div {
@@ -1757,8 +1766,13 @@ a.ais-Pagination-link:hover {
   overflow-wrap: anywhere;
 }
 
-#searchbox {
+#searchbox, #searchboxScripts, #searchboxML {
   margin: 1rem 0rem 2rem 0rem;
+  min-height: 34px;
+}
+
+#searchstats, #searchstatsScripts, #searchstatsML {
+  min-height: 24px;
 }
 
 .ais-SearchBox-input {
